--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -15,58 +15,139 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Event</h4>
+        <h4 class="modal-title"><%= @event.title %></h4>
       </div>
       <br />
       <div class="modal-body">
         <form method="post" action="#" enctype="multipart/form-data" id="current_event" data-id="<%= @event.id %>">
           <div class="form-group">
-            <label for="event_title">Event Title</label>
-            <input type="text" class="form-control" id="event_title" value="<%= @event.title %>" name="event_title" required />
+            <label for="title">Event Title</label>
+            <input type="text" class="form-control" id="title" value="<%= @event.title %>" name="title" required />
           </div>
           <div class="form-group">
-            <label for="event__date">Event Date</label>
-            <input type="text" class="form-control flatpickr" id="event_date" value="<%= @event.date %>" name="event__date" data-date-format="d-m-Y" />
+            <label for="date">Event Date</label>
+            <input type="text" class="form-control flatpickr" id="date" value="<%= @event.date %>" name="date" data-date-format="d-m-Y" />
           </div>
           <div class="form-group">
-            <label for="event_time">Event Time</label>
-            <input type="text" data-enable-time="true" data-no-calendar="true" value="<%= @event.time %>" class="form-control flatpickr" id="event_time" name="event_time" required />
+            <label for="time">Event Time</label>
+            <input type="text" data-enable-time="true" data-no-calendar="true" value="<%= @event.time %>" class="form-control flatpickr" id="time" name="time" required />
           </div>
           <div class="form-group">
-            <label for="event_number_guests">Number Of Guests</label>
-            <input type="text" class="form-control" id="event_number_guests" value="<%= @event.guest_limit %>" name="event_number_guests" required />
+            <label for="images_files">Event Image</label>
+            <input type="file" class="form-control" name="images_files" id="images_files" multiple />
           </div>
           <div class="form-group">
-            <label for="event_unlimited">No Guest Limit</label>
+            <label for="user_address">Event Will Be Hosted At Your Address</label>
+            <input type="checkbox" id="user_address" name="user_address" />
+          </div>
+          <div class="form-group">
+            <label for="street">Address</label>
+            <input type="text" class="form-control" id="streetEvent" value="<%= @event.address&.street %>" name="street"  />
+          </div>
+          <div class="form-group">
+            <label for="city">City</label>
+            <input type="text" class="form-control" id="cityEvent" value="<%= @event.address&.city %>" name="city"  />
+          </div>
+          <div class="form-group">
+            <label for="state" >State</label>
+            <select id="stateEvent" name="state" selected="<%= @event.address&.state %>" value="<%= @event.address&.state %>" class="form-control">
+              <% if @event.address %>
+                <option selected value><%= @event.address&.state %></option>
+              <% else %>
+                <option disabled selected value> -- select a state -- </option>
+              <% end %>
+              <option value="Alabama">Alabama</option>
+              <option value="Alaska">Alaska</option>
+              <option value="Arizona">Arizona</option>
+              <option value="Arkansas">Arkansas</option>
+              <option value="California">California</option>
+              <option value="Colorado">Colorado</option>
+              <option value="Connecticut">Connecticut</option>
+              <option value="Delaware">Delaware</option>
+              <option value="District Of Columbia">District Of Columbia</option>
+              <option value="Florida">Florida</option>
+              <option value="Georgia">Georgia</option>
+              <option value="Hawaii">Hawaii</option>
+              <option value="Idaho">Idaho</option>
+              <option value="Illinois">Illinois</option>
+              <option value="Indiana">Indiana</option>
+              <option value="Iowa">Iowa</option>
+              <option value="Kansas">Kansas</option>
+              <option value="Kentucky">Kentucky</option>
+              <option value="Louisiana">Louisiana</option>
+              <option value="Maine">Maine</option>
+              <option value="Maryland">Maryland</option>
+              <option value="Massachusetts">Massachusetts</option>
+              <option value="Michigan">Michigan</option>
+              <option value="Minnesota">Minnesota</option>
+              <option value="Mississippi">Mississippi</option>
+              <option value="Missouri">Missouri</option>
+              <option value="Montana">Montana</option>
+              <option value="Nebraska">Nebraska</option>
+              <option value="Nevada">Nevada</option>
+              <option value="New Hampshire">New Hampshire</option>
+              <option value="New Jersey">New Jersey</option>
+              <option value="New Mexico">New Mexico</option>
+              <option value="New York">New York</option>
+              <option value="North Carolina">North Carolina</option>
+              <option value="North Dakota">North Dakota</option>
+              <option value="Ohio">Ohio</option>
+              <option value="Oklahoma">Oklahoma</option>
+              <option value="Oregon">Oregon</option>
+              <option value="Pennsylvania">Pennsylvania</option>
+              <option value="Rhode Island">Rhode Island</option>
+              <option value="South Carolina">South Carolina</option>
+              <option value="South Dakota">South Dakota</option>
+              <option value="Tennessee">Tennessee</option>
+              <option value="Texas">Texas</option>
+              <option value="Utah">Utah</option>
+              <option value="Vermont">Vermont</option>
+              <option value="Virginia">Virginia</option>
+              <option value="Washington">Washington</option>
+              <option value="West Virginia">West Virginia</option>
+              <option value="Wisconsin">Wisconsin</option>
+              <option value="Wyoming">Wyoming</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="zip">Zip Code</label>
+            <input type="text" class="form-control" id="zipEvent" value="<%= @event.address&.zip %>" name="zip"  />
+          </div>
+          <div class="form-group">
+            <label for="guest_limit">Number Of Guests</label>
+            <input type="text" class="form-control" id="guest_limit" value="<%= @event.guest_limit %>" name="guest_limit" />
+          </div>
+          <div class="form-group">
+            <label for="unlimited_guests">No Guest Limit</label>
             <% if @event.unlimited_guests %>
-              <input type="checkbox" id="event_unlimited" checked="<%= @event.unlimited_guests %>" name="event_unlimited" />
+              <input type="checkbox" id="unlimited_guests" checked="<%= @event.unlimited_guests %>" name="unlimited_guests" />
             <% else %>
-              <input type="checkbox" id="event_unlimited" name="event_unlimited" />
+              <input type="checkbox" id="unlimited_guests" name="unlimited_guests" />
             <% end %>
           </div>
           <div class="form-group">
-            <label for="event_children">Children Welcome</label>
+            <label for="allow_children">Children Welcome</label>
             <% if @event.allow_children %>
-              <input type="checkbox" id="event_children" checked="checked" name="event_children" />
+              <input type="checkbox" id="allow_children" checked="checked" name="allow_children" />
             <% else %>
-              <input type="checkbox" id="event_children" name="event_children" />
+              <input type="checkbox" id="allow_children" name="allow_children" />
             <% end %>
           </div>
           <div class="form-group">
-            <label for="event_alcohol">Alcohol Welcome</label>
+            <label for="alcohol_allowed">Alcohol Welcome</label>
             <% if @event.alcohol_allowed %>
-            <input type="checkbox" id="event_alcohol" checked="checked" name="event_alcohol"/>
+            <input type="checkbox" id="alcohol_allowed" checked="checked" name="alcohol_allowed"/>
             <% else %>
-            <input type="checkbox" id="event_alcohol" name="event_alcohol"/>
+            <input type="checkbox" id="alcohol_allowed" name="alcohol_allowed"/>
             <% end %>
           </div>
           <div class="form-group">
-            <label for="event_food">Food/Drink</label>
-            <textarea type="text" id="event_food" name="event_food" class="form-control text_input" /><%= @event.food %></textarea>
+            <label for="food">Food/Drink</label>
+            <textarea type="text" id="food" name="food" class="form-control text_input" /><%= @event.food %></textarea>
           </div>
           <div class="form-group">
-            <label for="event_description">Description Of Event</label>
-            <textarea type="text" id="event_description" class="form-control text_input" name="event_description"><%= @event.description %></textarea>
+            <label for="description">Description Of Event</label>
+            <textarea type="text" id="description" class="form-control text_input" name="description"><%= @event.description %></textarea>
           </div>
           <br />
         </form>
@@ -115,8 +196,9 @@
 <% content_for :scripts do %>
   <script src="/js/flatpickr.min.js"></script>
   <script src="/js/events/show.js"></script>
+  <script src="/js/configImages.js"></script>
   <script type="text/javascript">
-      $("#event_date").flatpickr();
-      $("#event_time").flatpickr();
+      $("#date").flatpickr();
+      $("#time").flatpickr();
   </script>
 <% end %>
