--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -50,7 +50,7 @@
           </div>
           <div class="form-group">
             <label for="state" >State</label>
-            <select id="state" name="state" selected="<%= @user&.address&.state %>" value="<%= @user&.address&.state %>" class="form-control">
+            <select id="stateEvent" name="state" selected="<%= @user&.address&.state %>" value="<%= @user&.address&.state %>" class="form-control">
               <% if @user&.address %>
                 <option selected value><%= @user&.address&.state %></option>
               <% else %>
